--- a/set.env
+++ b/set.env
@@ -3,7 +3,7 @@ AUTO_READ_STATUS=yes
 AUTO_DOWNLOAD_STATUS=non
 PM_PERMIT=no
 BOT_NAME=⛃⃟T✮͢🍷𝄟⃝𝑹🔥亗⃟𝑺💀𝑩𝑶𝑻𝑰𝑷🍷༒☬
-BOT_MENU_LINKS=SUKUNA
+BOT_MENU_LINKS=KITAGAWA
 PUBLIC_MODE=no
 HEROKU=no
 OWNER_NAME=⛃⃟T✮͢🍷𝄟⃝𝑹🔥亗⃟𝑺💀𝑩𝑶𝑻𝑰𝑷🍷༒☬
