--- a/set.env
+++ b/set.env
@@ -3,7 +3,7 @@ AUTO_READ_STATUS=yes
 AUTO_DOWNLOAD_STATUS=non
 PM_PERMIT=no
 BOT_NAME=⛃⃟T✮͢🍷𝄟⃝𝑹🔥亗⃟𝑺💀𝑩𝑶𝑻𝑰𝑷🍷༒☬
-BOT_MENU_LINKS=KITAGAWA
+BOT_MENU_LINKS=LUFFY 
 PUBLIC_MODE=no
 HEROKU=no
 OWNER_NAME=⛃⃟T✮͢🍷𝄟⃝𝑹🔥亗⃟𝑺💀𝑩𝑶𝑻𝑰𝑷🍷༒☬
@@ -16,4 +16,4 @@ SESSION_ID=Zokou-MD-WHATSAPP-BOT;;;=>eyJub2lzZUtleSI6eyJwcml2YXRlIjp7InR5cGUiOiJ
 ANTI_VIEW_ONCE="yes
 ANTI_COMMAND_SPAM=yes
 ANTI_DELETE_MESSAGE=no
-AUTO_REACT_MESSAGE=yes
+AUTO_REACT_MESSAGE=no
